--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,38 @@
 body {
-    background-color: #a3a3a3;
-    background-color: #1a1717;
+    background-color: #000000;
 }
 
-.main{
-    width:800px;
-    height:200px;
-    position:absolute;
-    left:50%;
-    top:50%;
-    margin:-150px 0 0 -350px;
+.main {
+    width: 800px;
+    height: 200px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -200px 0 0 -400px;
+}
+
+.logo {
+    width: 200px;
+    height: 200px;
+}
+
+.langs {
+    width: 100px;
+}
+
+.langs span {
+    color: #a8a8a8;
+    margin-right: 20px;
+    padding: 5px;
+    font-size: 1.0em;
+    display: block;
+}
+
+.langs span:hover {
+    color: #000000;
+    cursor: pointer;
+    background-color: #a8a8a8;
 }
 
 .label {
