Implement footer and changes in changeLocation

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,11 @@ body {
 .github {
     float: right;
 }
+
+.location {
+    color: #a8a8a8;
+    padding-left: 5px;
+    font-size: 1.0em;
+    position: fixed;
+    bottom: 0;
+}
