--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: -200px 0 0 -400px;
+    margin: -230px 0 0 -400px;
 }
 
 .logo {
@@ -17,11 +17,11 @@ body {
     height: 200px;
 }
 
-.langs {
+#-langs-container {
     width: 100px;
 }
 
-.langs span {
+#-langs-container span {
     color: #a8a8a8;
     margin-right: 20px;
     padding: 5px;
@@ -29,19 +29,29 @@ body {
     display: block;
 }
 
-.langs span:hover {
+#-langs-container span:hover {
     color: #000000;
     cursor: pointer;
     background-color: #a8a8a8;
 }
 
-.label {
+#-fajr-label {
+    font-size: 1.5em;
+    color: #a8a8a8;
+}
+
+#-fajr-time {
+    font-size: 1.5em;
+    color: #ffffff;
+}
+
+#-maghrib-label {
     font-size: 4em;
     margin-right: 50px;
     color: #a8a8a8;
 }
 
-.time {
+#-maghrib-time {
     font-size: 9em;
     color: #ffffff;
 }
@@ -50,7 +60,7 @@ body {
     float: right;
 }
 
-.location {
+#-location {
     color: #a8a8a8;
     padding-left: 5px;
     font-size: 1.0em;
